--- a/src/gameView.fxml
+++ b/src/gameView.fxml
@@ -4,8 +4,9 @@
 <?import javafx.scene.shape.Sphere?>
 
 
+<?import javafx.scene.shape.Circle?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="590.0" prefWidth="405.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameController">
    <children>
-      <Sphere fx:id="Balle" layoutX="203.0" layoutY="526.0" radius="50" />
+      <Circle fx:id="Balle" layoutX="203.0" layoutY="526.0" radius="50" />
    </children>
 </AnchorPane>
